@@ -39,6 +39,7 @@
 #define __NR_fsmount		432
 #define __NR_fspick		433
 
+#define __NR_pidfd_open		434
 #define __NR_clone3		435
 #define __NR_close_range	436
 #define __NR_openat2        437
